update for vigniette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@40253 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/references.bib
+++ b/inst/doc/references.bib
@@ -117,6 +117,21 @@
   timestamp = {2008.02.21}
 }
 
+@ARTICLE{Schmidberger2009,
+  author = {Markus Schmidberger and Martin Morgan and Dirk Eddelbuettel and Hao
+	Yu and Luke Tierney and Ulrich Mansmann},
+  title = {State-of-the-Art in Parallel Computing with R},
+  year = {2009},
+  volume = {47},
+  month = {1},
+  keyword = {R, high performance computing, parallel computing, computer cluster,
+	multi-core systems, grid computing, benchmark.},
+  owner = {schmidb},
+  series = {tech},
+  timestamp = {2009.06.22},
+  url = {http://epub.ub.uni-muenchen.de/8991/}
+}
+
 @MANUAL{Team2007,
   title = {R: A Language and Environment for Statistical Computing},
   author = {R Development Core Team},
